@@ -1,30 +1,43 @@
 #+TITLE: gnuplot-interface package
 
-Low level interface to gnuplot that strives to provide:
+Low level interface to gnuplot that provides:
 - start of gnuplot process
 - passing raw gnuplot commands
 - examining of sent commands 
-- windows management
 
 
 Typical usage:
 #+begin_src lisp
 (start-gnuplot) ;; starts the process
-(init-gnuplot) ;; initializes terminal
+(init-gnuplot) ;; optional, to initializes terminal
 (hello-world) ;;  test output
 (command "command-string") ;; send command to gnuplot
 (echo-command) ;; sell last sent command
 #+end_src
 
-
+For passing complex gnuplot commands that consists of many lines, use
+the =send-line= and =send-line-break= commands
 
 The interface has been developed and tested on =sbcl= on Linux and
-=clisp= on cygwin.
-Operation on these platforms requires the following features to be declared
-- sbcl ::  =sbcl= 
-- clisp :: =clisp= and =linux= or =clisp= and =cygwin=
-  
+=clisp= on cygwin.  On =cygwin= it works with cygwin's gnuplot and
+also the windows executable =wgnuplot=.
+
+For use of cygwin+wgnuplot, one needs to provide the
+feature :wgnuplot.  Furthermore, one needs to set :wgnuplot's property
+list as
+#+BEGIN_SRC lisp
+(setf (symbol-plist :wgnuplot)
+   (list :executable "posix compliant path to executable"))
+#+END_SRC
+For example, the path can be:
+#+BEGIN_QUOTE
+"/c/Program\\ Files/wgnuplot/binary/gnuplot.exe"
+#+END_QUOTE
   
 Caveats:
 - stream plumbing is not thoroughly tested
-- windows management is also not thoroughly tested
+- windows management is not implemented
+
+Todo:
+- Use trivial-shell for communication to the process
+- multiple windows management
