@@ -1,3 +1,10 @@
+2012-02-25  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* gnuplot-interface.lisp (*executable*): Added wgnuplot path
+	(*terminal*): Changed feature tests to be based on platforms, not
+	my individual machines
+	(eval-when (...)): cleaned-up DISPLAY initialization 
+
 2011-10-05  Mirko Vukovic  <Mirko Vukovic <mirko.vukovic@us.tel.com>>
 
 	* package.lisp (#:gnuplot-interface): Updated documentation
